# VA_agent

./: pyproject.toml
alembic/: env.py
alembic/versions/: 4442454a6e48_added_todo_model.py  647fe8361d68_first_commit.py  f714aa66d3f6_added_todo_model.py
app/: main.py
app/api/v1/chatbot/: route.py  service.py
app/api/v1/todos/: models.py  routes.py  schemas.py  services.py
app/core/: config.py  database.py  middleware.py  routes.py
app/modules/: VA_graph.py  app.ipynb  app_mcp.ipynb  mcp_VA_graph.py
app/modules/agents/: VA_graph.py  agents.py
app/modules/mcp_servers/: mcp_config.json  todo_server.py
app/modules/mcpconfig/: config.py  mcp_config.json
app/modules/notebooks/: VA_agent.ipynb  app.ipynb  search_agent.ipynb  todo_agent.ipynb
app/modules/servers/: search_server.py
